name:                druid-query
version:             0.0.0.1
synopsis:            Type-safe query interface to druid's JSON API
description:         Type-safe query interface to druid's JSON API
homepage:            https://github.com/anchor/druid-query
license:             BSD3
license-file:        LICENSE
author:              Christian Marie <christian@ponies.io>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           Anchor Systems
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/anchor/druid-query

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Network.Druid.Query
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , scientific
                     , bifunctors
                     , bytestring
                     , pipes-http
                     , time-locale-compat
                     , pipes-aeson
                     , iso8601-time
                     , time
                     , text
                     , unordered-containers
                     , vector

test-suite unit
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             unit.hs
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , aeson-qq
                     , aeson-diff
                     , druid-query
                     , time-qq
                     , QuickCheck
                     , hspec
